--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,10 +3,9 @@
 @import "../vendor/fonts.css";
 
 body {
-  margin: 0 auto;
   padding: 0;
-  max-width: 1920px;
   background: white;
+  box-sizing: border-box;
 }
 
 * {
@@ -21,4 +20,14 @@ body {
   --accent-color: #e74c3c;
   --dark-color: #2c3e50;
   --light-color: #ecf0f1;
+}
+
+
+
+
+.wrapper {
+  display: flex;
+  margin: 0 auto;
+  max-width: 1345px;
+  padding: 0 15px;
 }
