--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -1,11 +1,212 @@
-.hero {}
+.hero {
+    margin-top: 60px;
+}
 
 
 .hero__group {
     display: flex;
 }
 
-.hero__group>img {
+.hero__block {
+    position: relative;
+}
+
+.hero__content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.hero__content>h2 {
+    font-family: "Montserrat";
+    font-weight: 700;
+    font-size: 84px;
+    text-align: center;
+    line-height: 90%;
+    margin-right: 53px;
+}
+
+.hero__content>h2>span:first-child {
+    color: var(--primary-blue);
+}
+
+.hero__content>h2>span:last-child {
+    color: var(--primary-black);
+}
+
+
+.hero__content>p {
+    font-family: "Onest";
+    font-weight: 400;
+    font-size: 24px;
+    text-align: center;
+    margin-top: 18px;
+}
+
+.hero__group {
+    display: flex;
+    justify-content: space-between;
+    width: 990px;
+    margin: 35px auto 37px auto;
+}
+
+.hero__group>div {
+    border-radius: 32px;
+    box-shadow: 0px 4px 70px 0px rgba(0, 0, 0, 0.15);
     width: 330px;
-    height: 270px;
+    aspect-ratio: 11/9;
+    background-color: var(--white);
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+.hero__group>div>img {
+    margin-top: auto;
+    max-width: 100%;
+    height: auto;
+    display: block
+}
+
+.hero-item--first img {
+    align-self: flex-start;
+    margin-left: auto;
+    margin-bottom: 0;
+    margin-right: auto;
+}
+
+.hero-item--second img {
+    align-self: flex-end;
+    border-radius: 32px
+}
+
+.hero__main>button {
+    display: flex;
+    margin-top: 10px;
+    margin: 0 auto;
+}
+
+.hero__label {
+    position: absolute;
+    top: 42px;
+    left: 69%;
+    background: rgba(161, 203, 255, 0.2);
+    width: 267px;
+    border-radius: 50px;
+    padding: 16px 0px;
+    font-family: "Onest";
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 100%;
+    text-align: center;
+    transform: rotate(10deg);
+}
+
+.hero__label>img {
+    width: 20px;
+}
+
+
+@media (max-width: 1024px) {
+    .hero__group {
+        width: 100%;
+    }
+
+    .hero__group>div {
+        width: calc((100% / 3) - 5px);
+    }
+
+    .hero__content>h2 {
+        font-size: 9vw;
+        margin-right: 0px;
+    }
+
+    .hero {
+        margin-top: 110px;
+    }
+
+    .hero__group>div>img {
+        max-width: 83%;
+    }
+
+    .hero__label {
+        top: -53px;
+        left: auto;
+        right: 16%;
+    }
+}
+
+@media (max-width: 768px) {
+    .hero__label {
+        font-size: 16px;
+        width: 218px;
+    }
+
+    .hero__label>img {
+        width: 16px;
+    }
+}
+
+@media (max-width: 550px) {
+    .hero {
+        margin-top: 62px;
+    }
+
+    .hero__label {
+        font-size: 14px;
+        width: 162px;
+        padding: 8px 0px;
+        top: -35px;
+    }
+
+    .hero__label>img {
+        width: 14px;
+    }
+}
+
+
+@media (max-width: 425px) {
+    .hero__content>h2 {
+        font-size: 32px;
+    }
+
+    .hero__content>p {
+        font-size: 16px;
+    }
+
+    .hero__label {
+        font-size: 12px;
+        top: -39px;
+    }
+
+    .hero__content>p {
+        margin-top: 15px;
+    }
+
+    .hero__group>div {
+        border-radius: 12px;
+    }
+
+    .hero__group {
+        margin: 16px auto 30px auto;
+    }
+}
+
+@media (max-width: 370px) {
+    .hero {
+        margin-top: 65px;
+    }
+
+    .hero__label {
+        top: -38px;
+        right: 2%;
+    }
+}
+
+@media (max-width: 360px) {
+    .hero__content>h2 {
+        font-size: 8vw;
+
+    }
 }
