--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,12 +1,14 @@
 @import "./header.css";
 @import "./hero.css";
+@import "./specification.css";
+@import "./swiper-bundle.min.css";
 @import "./normalize.css";
 @import "../vendor/fonts.css";
 
 
 :root {
   --primary-black: rgba(34, 34, 34, 1);
-  --primary-gray: rgba(51 51 51, 1);
+  --primary-gray: rgba(51, 51, 51, 1);
   --primary-blue: rgba(48, 139, 253, 1);
   --hover-blue: rgba(35, 118, 221, 1);
   --disabled: rgba(213, 213, 213, 1);
@@ -18,6 +20,8 @@ body {
   padding: 0;
   background: var(--white);
   box-sizing: border-box;
+  position: relative;
+  height: 100%;
 }
 
 * {
@@ -33,6 +37,12 @@ body {
   padding: 0 15px;
 }
 
+button {
+  border: none;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+
 .button {
   font-family: "Onest";
   font-weight: 400;
@@ -40,9 +50,8 @@ body {
   line-height: 120%;
   color: var(--white);
   border-radius: 40px;
-  border: none;
   padding: 30px;
-  cursor: pointer;
+
 }
 
 .btn-blue {
