--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,6 +1,8 @@
 @import "./header.css";
 @import "./hero.css";
 @import "./specification.css";
+@import "./service.css";
+@import "./warranty.css";
 @import "./swiper-bundle.min.css";
 @import "./normalize.css";
 @import "../vendor/fonts.css";
@@ -13,6 +15,7 @@
   --hover-blue: rgba(35, 118, 221, 1);
   --disabled: rgba(213, 213, 213, 1);
   --white: rgba(255, 255, 255, 1);
+  --primary-gray-light: rgba(249, 249, 249, 1);
 }
 
 
@@ -33,7 +36,7 @@ body {
 .wrapper {
   display: flex;
   margin: 0 auto;
-  max-width: 1345px;
+  max-width: 1312px;
   padding: 0 15px;
 }
 
@@ -52,6 +55,10 @@ button {
   border-radius: 40px;
   padding: 30px;
 
+}
+
+.btn-white {
+  background-color: var(--white);
 }
 
 .btn-blue {
@@ -80,9 +87,55 @@ button {
   background-color: var(--disabled);
 }
 
+
+
+.label {
+  border-radius: 40px;
+  padding: 16px 32px;
+  font-family: "Onest";
+  font-weight: 400;
+  font-size: 32px;
+
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+
+.label-color-black {
+  background: var(--primary-gray);
+  color: var(--white);
+}
+
+.label-color-white {
+  background: var(--primary-gray-light);
+  color: var(--primary-black);
+}
+
+.label-dot {
+  width: 10px;
+  height: 10px;
+  background-color: var(--primary-blue);
+  border-radius: 50%;
+}
+
+@media (max-width: 768px) {
+  .label {
+    padding: 16px 32px;
+    font-size: 20px;
+  }
+}
+
+
 @media (max-width: 425px) {
   .button {
     font-size: 14px;
     padding: 22px 32px;
+  }
+
+  .label {
+    padding: 16px 10px;
+    font-size: 14px;
   }
 }
