--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,6 +3,8 @@
 @import "./specification.css";
 @import "./service.css";
 @import "./warranty.css";
+@import "./efficiency.css";
+@import "./upgrade.css";
 @import "./swiper-bundle.min.css";
 @import "./normalize.css";
 @import "../vendor/fonts.css";
@@ -16,6 +18,7 @@
   --disabled: rgba(213, 213, 213, 1);
   --white: rgba(255, 255, 255, 1);
   --primary-gray-light: rgba(249, 249, 249, 1);
+  --primary-green: rgba(58, 194, 112, 1)
 }
 
 
@@ -95,7 +98,6 @@ button {
   font-family: "Onest";
   font-weight: 400;
   font-size: 32px;
-
   display: flex;
   gap: 10px;
   align-items: center;
@@ -120,13 +122,36 @@ button {
   border-radius: 50%;
 }
 
+.select-btn {
+  border-radius: 41px;
+  background-color: var(--primary-gray);
+  font-family: "Onest";
+  font-weight: 500;
+  font-size: 24px;
+  color: var(--white);
+  display: flex;
+  align-items: center;
+  padding: 17px 24px;
+}
+
 @media (max-width: 768px) {
   .label {
-    padding: 16px 32px;
+    padding: 12px 32px;
     font-size: 20px;
+  }
+
+  .label>span>span {
+    display: none;
   }
 }
 
+@media (max-width: 550px) {
+  .select-btn {
+    border-radius: 41px;
+    font-size: 14px;
+    padding: 12px 24px;
+  }
+}
 
 @media (max-width: 425px) {
   .button {
