--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -5,6 +5,7 @@
 @import "./warranty.css";
 @import "./efficiency.css";
 @import "./upgrade.css";
+@import "./feedback.css";
 @import "./swiper-bundle.min.css";
 @import "./normalize.css";
 @import "../vendor/fonts.css";
@@ -17,6 +18,7 @@
   --hover-blue: rgba(35, 118, 221, 1);
   --disabled: rgba(213, 213, 213, 1);
   --white: rgba(255, 255, 255, 1);
+  --white-01: rgba(255, 255, 255, 0.1);
   --primary-gray-light: rgba(249, 249, 249, 1);
   --primary-green: rgba(58, 194, 112, 1)
 }
@@ -78,19 +80,17 @@ button {
 
 
 .btn-orange {
-  background-color: linear-gradient(90deg, #FFE259 0%, #FFA751 100%);
+  background: linear-gradient(90deg, #FFE259 0%, #FFA751 100%);
 }
 
 .btn-orange:hover {
-  background-color: linear-gradient(90deg, #FCD000 0%, #FF8E1F 100%);
+  background: linear-gradient(90deg, #FCD000 0%, #FF8E1F 100%);
 
 }
 
 .btn-orange:disabled {
   background-color: var(--disabled);
 }
-
-
 
 .label {
   border-radius: 40px;
@@ -134,6 +134,18 @@ button {
   padding: 17px 24px;
 }
 
+.section-wrap {
+  width: 100%;
+  border-radius: 40px;
+  padding: 40px;
+  font-family: "Onest";
+  color: var(--white);
+  text-align: left;
+  position: relative;
+  background-color: var(--primary-black)
+}
+
+
 @media (max-width: 768px) {
   .label {
     padding: 12px 32px;
@@ -143,6 +155,10 @@ button {
   .label>span>span {
     display: none;
   }
+
+  .section-wrap {
+    padding: 32px 24px;
+  }
 }
 
 @media (max-width: 550px) {
@@ -150,6 +166,10 @@ button {
     border-radius: 41px;
     font-size: 14px;
     padding: 12px 24px;
+  }
+
+  .section-wrap {
+    border-radius: 22px;
   }
 }
 
