--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -43,9 +43,13 @@ footer {
 }
 
 .footer__menu {
-    color: var(--white);
     font-size: 20px;
     gap: 40px;
+}
+
+.footer__menu>li>a {
+    color: var(--white);
+    text-decoration: none;
 }
 
 .footer__conf {
