--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,5 +1,5 @@
 .header__container {
-    font-family: "Onest";
+    font-family: "Onest", sans-serif;
     color: var(--primary-black);
     padding-top: 50px;
     width: 100%;
@@ -13,36 +13,86 @@
     position: absolute;
     top: 30px;
     left: 15px;
+    font-size: 48px;
+    font-weight: bold;
 }
 
 .header-burger {
     display: none;
     flex-direction: column;
     gap: 5px;
+    cursor: pointer;
+    position: absolute;
+    right: 15px;
+    top: 40px;
+    z-index: 1000;
 }
 
 .header-burger>div {
     width: 25px;
     height: 3px;
     background-color: var(--primary-black);
+    transition: all 0.3s;
 }
 
-
-
-.header__container>ul {
+.header__container>.nav-menu {
     display: flex;
     list-style-type: none;
     font-size: 20px;
     font-weight: 400;
     line-height: 120%;
-    text-align: left;
-    justify-self: center;
     gap: 40px;
+    margin: 0;
+    padding: 0;
+}
+
+.nav-link {
+    color: var(--primary-black);
+    text-decoration: none;
+
+}
+
+.header__container>.nav-menu li {
+    cursor: pointer;
 }
 
 
+
+.mobile-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: white;
+    padding: 20px 0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 999;
+}
+
+.mobile-menu.active {
+    display: block;
+}
+
+.mobile-menu ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+}
+
+.mobile-menu li {
+    padding: 15px 0;
+    font-size: 18px;
+    border-bottom: 1px solid #eee;
+}
+
+.mobile-menu li:last-child {
+    border-bottom: none;
+}
+
 @media (max-width: 900px) {
-    .header__container>ul {
+    .header__container>.nav-menu {
         font-size: 16px;
         gap: 20px;
         margin-left: 50px;
@@ -54,13 +104,13 @@
 }
 
 @media (max-width: 600px) {
-    .header__container>ul {
+    .header__container>.nav-menu {
         margin-left: 100px;
     }
 }
 
 @media (max-width: 550px) {
-    .header__container>ul {
+    .header__container>.nav-menu {
         display: none;
     }
 
@@ -69,13 +119,13 @@
     }
 
     .header__container {
-        justify-content: right;
+        justify-content: flex-end;
         padding-top: 25px;
+        padding-right: 15px;
     }
 
     .header__container>.logo {
-        top: 5px;
-        left: 0px;
+        top: 15px;
+        left: 15px;
     }
-
 }
