--- a/src/styles/efficiency.css
+++ b/src/styles/efficiency.css
@@ -82,6 +82,7 @@
     padding: 12px 16px;
     cursor: pointer;
     display: flex;
+    flex-direction: row-reverse;
     align-items: center;
     transition: background-color 0.2s;
     user-select: none;
@@ -115,7 +116,7 @@
     opacity: 0;
     transition: opacity 0.2s;
     position: absolute;
-    left: 24px;
+    right: 34px;
 }
 
 
