--- a/src/styles/specification.css
+++ b/src/styles/specification.css
@@ -240,19 +240,19 @@
     font-size: 32px;
 }
 
-.block__specifications>ul {
+.specifications__list {
     display: flex;
     flex-direction: column;
     gap: 10px;
     margin-top: 30px;
 }
 
-.block__specifications>ul>li {
+.specifications__list>li {
     list-style-type: none;
 
 }
 
-.block__specifications>ul>li>div {
+.specifications__list>li>div {
     width: 100%;
     height: 100px;
     border-radius: 24px;
@@ -261,7 +261,7 @@
     box-sizing: border-box;
 }
 
-.block__specifications>ul>li>div>p {
+.specifications__list>li>div>p {
     font-weight: 400;
     font-size: 20px;
     color: rgba(165, 165, 165, 1) !important;
@@ -269,10 +269,30 @@
 }
 
 
-.block__specifications>ul>li>div>span {
+.specifications__list>li>div>span {
     font-weight: 600;
     font-size: 28px;
+}
 
+.block__specifications>button {
+    margin: 30px auto 0 auto;
+}
+
+.specifications__list li {
+    transition: all 0.3s ease;
+}
+
+.select-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    gap: 8px;
+    font-size: 16px;
+    color: #007bff;
+}
+
+.select-btn[aria-expanded="true"] .arrow {
+    transform: rotate(180deg);
 }
 
 
@@ -292,9 +312,7 @@
     .block__slider {
         width: 450px;
     }
-}
 
-@media (max-width: 1280px) {
     .specification__block {
         flex-direction: column;
         gap: 20px;
@@ -360,7 +378,7 @@
         margin-top: 25px;
     }
 
-    .block__specifications>ul {
+    .specifications__list {
         margin-top: 15px;
         gap: 4px;
     }
@@ -369,16 +387,16 @@
         font-size: 20px;
     }
 
-    .block__specifications>ul>li>div>p {
+    .specifications__list>li>div>p {
         font-size: 14px;
     }
 
-    .block__specifications>ul>li>div>span {
+    .specifications__list>li>div>span {
         font-size: 16px;
 
     }
 
-    .block__specifications>ul>li>div {
+    .specifications__list>li>div {
         height: 67px;
         padding: 16px 12px;
         border-radius: 16px;
