--- a/src/styles/warranty.css
+++ b/src/styles/warranty.css
@@ -15,22 +15,15 @@
     line-height: 140%;
 }
 
-.warranty__block>button {
-    padding: 28px 32px;
-    border-radius: 40px;
-    color: rgba(34, 34, 34, 1);
-    font-size: 20px;
-    font-weight: 400;
-    margin-top: 40px;
-    position: relative;
-    z-index: 2;
-}
-
 .warranty__block>img {
     position: absolute;
     bottom: 0;
     right: 0;
     z-index: 1;
+}
+
+.warranty__block>.specification-link {
+    margin-top: 40px;
 }
 
 @media (max-width: 1024px) {
@@ -53,11 +46,8 @@
     }
 
 
-    .warranty__block>button {
-        padding: 21px 52px;
-        border-radius: 40px;
-        font-size: 14px;
-        margin-top: 100px;
+    .warranty__block>.specification-link {
+        margin-top: 82px;
     }
 }
 
