--- a/src/styles/service.css
+++ b/src/styles/service.css
@@ -3,7 +3,7 @@
     grid-template-columns: repeat(12, 1fr);
     gap: 20px;
     width: 100%;
-    margin-top: 56px;
+    margin-top: 67px;
 }
 
 .service__card {
@@ -59,6 +59,7 @@
 .service__content>span {
     font-size: 20px;
     font-weight: 400;
+    line-height: 120%;
     margin-top: auto;
 }
 
