--- a/src/styles/upgrade.css
+++ b/src/styles/upgrade.css
@@ -58,9 +58,10 @@
 
 
 .upgrade__headline>h3 {
-    width: 60%;
+    width: 56%;
     font-size: 54px;
-    line-height: 125%;
+    line-height: 110%;
+    padding-left: 22px;
 }
 
 .upgrade__headline>h3>span {
@@ -76,6 +77,7 @@
     font-size: 96px;
     box-sizing: border-box;
     margin-top: 16px;
+    height: 140px;
     display: flex;
     justify-content: center;
     align-items: center;
