--- a/src/styles/warranty.css
+++ b/src/styles/warranty.css
@@ -52,7 +52,6 @@
 
 
 .warranty-link {
-    margin-top: 40px;
     border-radius: 40px;
     position: relative;
     z-index: 2;
@@ -65,6 +64,11 @@
     font-size: 20px;
     font-weight: 400;
 }
+
+.warranty-link-border {
+    margin-top: 40px;
+}
+
 
 
 .installment-link {
@@ -107,7 +111,7 @@
     }
 
     .warranty-link {
-        margin-top: 82px;
+
         border-radius: 40px;
         position: relative;
         z-index: 2;
@@ -120,6 +124,11 @@
         font-size: 20px;
         font-weight: 400;
     }
+
+    .warranty-link-border {
+        margin-top: 82px;
+    }
+
 }
 
 @media (max-width: 550px) {
@@ -129,6 +138,7 @@
 
     .warranty__block>p {
         margin-top: 15px;
+        padding-right: 0px;
     }
 
     .warranty__img {
@@ -137,7 +147,16 @@
     }
 
     .warranty-link {
-        margin-top: 20px !important;
+
+        padding: 22px 51px;
+    }
+
+    .warranty-link>a {
+        font-size: 14px;
+    }
+
+    .warranty-link-border {
+        margin-top: 100px;
     }
 
     .installment-link {
