--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -106,6 +106,7 @@
     line-height: 100%;
     text-align: center;
     transform: rotate(10deg);
+    backdrop-filter: blur(5px);
 }
 
 .hero__label>img {
