--- a/src/styles/efficiency.css
+++ b/src/styles/efficiency.css
@@ -85,6 +85,7 @@
     align-items: center;
     transition: background-color 0.2s;
     user-select: none;
+    gap: 10px;
 }
 
 .select-items div:hover {
