--- a/src/styles/efficiency.css
+++ b/src/styles/efficiency.css
@@ -81,11 +81,10 @@
     padding: 12px 16px;
     cursor: pointer;
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     align-items: center;
     transition: background-color 0.2s;
     user-select: none;
-    gap: 10px;
 }
 
 .select-items div:hover {
